Fixes prev/next buttons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1217,7 +1217,7 @@ body {
   margin-bottom: 0.5em; }
 
 .post h2 {
-  font-size: 1.75em; }
+  font-size: 1.375em; }
   @media screen and (min-width: 40em) {
     .post h2 {
       font-size: 2.25em; } }
@@ -1252,12 +1252,21 @@ body {
     float: left;
     display: block;
     margin-right: 2.35765%;
-    width: 31.76157%;
+    width: 100%;
     border: 0.3125em solid #E9E9E9;
     font-family: "adriane", Georgia, Times, serif;
-    padding: 1em 1em 2em; }
+    padding: 0.5em 0.5em 1em; }
     .post .prev-next a:last-child {
       margin-right: 0; }
+    @media screen and (min-width: 40em) {
+      .post .prev-next a {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 31.76157%;
+        padding: 1em 1em 2em; }
+        .post .prev-next a:last-child {
+          margin-right: 0; } }
     .post .prev-next a span.link-text {
       font-size: 1.5em; }
     .post .prev-next a span.post-title {
@@ -1271,7 +1280,10 @@ body {
       .post .prev-next a span.post-title:before, .post .prev-next a span.post-title:after {
         content: '\0022'; }
     .post .prev-next a:nth-child(1) {
-      margin-left: 17.05961%; }
+      margin-bottom: 1em; }
+      @media screen and (min-width: 40em) {
+        .post .prev-next a:nth-child(1) {
+          margin-left: 17.05961%; } }
     .post .prev-next a:nth-child(2) {
       text-align: right; }
 
